# rwrite

./: COPYRIGHT  INSTALL  Makefile.in  configure  configure.in  inetd.conf.add  match.c  match.h  mkdist  mkdist-rule  mkrwritebox.1  mkrwritebox.c  rfc1756.ps  rwrite-away.1  rwrite-away.sh  rwrite.1  rwrite.c  rwrite.h  rwrited.8  rwrited.c  rwriterc.c  sample-dot-rwrite-away  sample-dot-rwriterc  sample-etc-rwrite.conf  services.add
